head changes reverted

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <html>
-  <head>
-  	<meta charset="UTF-8">
-    <title>Version Control</title>
-  </head>
+  <head></head>
   <body>
     <h1>Hello Git</h1>
   </body>
